Switch back to dir /w method for shortname conversion as the VBS method doesn't work for directories but only files (and is magnitudes longer). Added more sanity checks in openExplorer code.